fixed the alignment issue for small screens

--- a/lesson2/styles/medium.css
+++ b/lesson2/styles/medium.css
@@ -2,6 +2,17 @@
 
     /* <----ELEMENT SELECTORS----> */
 
+    body {
+        background-color: #A2AEBB;
+        font-family: "Markazi Text", serif;
+        padding: 5px 25px;
+        font-size: 18px;
+        margin: 0;
+        color: #444;
+        max-width: 800px;
+        text-align: center;
+    }
+
 
     h1 {
         font-size: 2.5rem;
@@ -11,11 +22,18 @@
         font-size: 1.5rem;
     }
 
+    h3 {
+        font-size: 1rem;
+        color: black;
+    }
+
     /* <----CLASS SELECTORS----> */
 
     .container {
         text-align: center;
         display: grid;
+        width: 80%;
+        margin: auto;
         grid-template-columns: 1fr 1fr;
     }
 
@@ -32,14 +50,22 @@
         margin: 1em;
         display: inline-block;
     }
-    
+
     .containerItem3 {
         grid-column: 1/2;
         display: inline-block;
     }
 
+    /* <----ID SELECTORS----> */
 
-
-
-
+    #content {
+        width: 100%;
+        margin: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 999;
+    }
 }
