--- a/lesson2/styles/small.css
+++ b/lesson2/styles/small.css
@@ -30,7 +30,6 @@ a:hover {
 body {
     background-color: #A2AEBB;
     font-family: "Markazi Text", serif;
-    padding: 5px 25px;
     font-size: 18px;
     margin: 0;
     color: #444;
@@ -40,9 +39,8 @@ body {
 
 footer {
     background-color: #EACB00;
-    border-radius: 25px;
-    padding: 5px;
-    margin: 50px;
+    padding: 5px 0;
+    width: 100%;
     color: black;
     text-align: center;
 }
@@ -66,36 +64,29 @@ h3 {
 
 header {
     background-color: #EACB00;
-    border-radius: 25px;
-    padding: 5px;
-    margin: 10px 20px 50px 20px;
+    padding: 5px 0;
     border: 1px;
     text-align: center;
+    width: 100%;
 }
 
 img {
     max-width: 300px;
+    width: 100%;
 }
 
-li {
+
+p {
     color: black;
 }
 
-p{
-    color:black;
-}
-
-ul {
-    list-style: none;
-    color: black;
-}
 
 /* <----CLASS SELECTORS----> */
 
 .container {
     text-align: center;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
 }
 
 .containerItem1 {
@@ -108,7 +99,6 @@ ul {
 .containerItem2 {
     grid-column: 1/2;
     padding: 1em;
-    margin: 1em;
     display: inline-block;
 }
 
@@ -116,20 +106,15 @@ ul {
 .containerItem3 {
     grid-column: 1/2;
     padding: 1em;
-    margin: 1em;
     display: inline-block;
 }
 
 /* <----ID SELECTORS----> */
 
 #content {
-    width: 75%;
-    height: 75%;
+    width: 100%;
     margin: auto;
-    position: absolute;
     top: 0;
-    left: 0;
     bottom: 0;
     right: 0;
-    z-index: 999;
 }
